orchestration/default-deny.yaml
# netpol-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bitcoin-default-deny
  labels:
    app: bitcoin
spec:
  podSelector:
    matchLabels:
      app: bitcoin
  policyTypes:
    - Ingress
    - Egress
